[api] /format endpoint returns JSON-encoded BAI2 file
